objects/Profile__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets_Value__c</fullName>
        <label>Assets Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Caste__c</fullName>
        <label>Caste</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Religion__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OC</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>Inter-Caste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Bith__c</fullName>
        <label>Date of Bith</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drinking_Habit__c</fullName>
        <label>Drinking Habit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Drinker</fullName>
                </value>
                <value>
                    <fullName>Occasional Drinker</fullName>
                </value>
                <value>
                    <fullName>Never Drinks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eating_habit__c</fullName>
        <label>Eating habit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Eggetarian</fullName>
                </value>
                <value>
                    <fullName>Non-Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10+2</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>B.Com</fullName>
                </value>
                <value>
                    <fullName>B.Science</fullName>
                </value>
                <value>
                    <fullName>B.Tech</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
                <value>
                    <fullName>BED</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>LLB</fullName>
                </value>
                <value>
                    <fullName>LLM</fullName>
                </value>
                <value>
                    <fullName>M.Tech</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MCA</fullName>
                </value>
                <value>
                    <fullName>MSC</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Known__c</fullName>
        <label>Languages Known</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Telugu</fullName>
                </value>
                <value>
                    <fullName>Marathi</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>Kannada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Guntur</fullName>
                </value>
                <value>
                    <fullName>Vijayawada</fullName>
                </value>
                <value>
                    <fullName>Warangal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>MailID</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mother_Tongue__c</fullName>
        <label>Mother Tongue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telugu</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                </value>
                <value>
                    <fullName>Kannada</fullName>
                </value>
                <value>
                    <fullName>Malayalam</fullName>
                </value>
                <value>
                    <fullName>Marathi</fullName>
                </value>
                <value>
                    <fullName>Marwari</fullName>
                </value>
                <value>
                    <fullName>Oriya</fullName>
                </value>
                <value>
                    <fullName>Punjabi</fullName>
                </value>
                <value>
                    <fullName>Sindhi</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
                <value>
                    <fullName>Arunachali</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Awadhi</fullName>
                </value>
                <value>
                    <fullName>Bihari</fullName>
                </value>
                <value>
                    <fullName>Chatisgarhi</fullName>
                </value>
                <value>
                    <fullName>Dogri</fullName>
                </value>
                <value>
                    <fullName>Miji</fullName>
                </value>
                <value>
                    <fullName>Mizo</fullName>
                </value>
                <value>
                    <fullName>Monpa</fullName>
                </value>
                <value>
                    <fullName>Nicobarese</fullName>
                </value>
                <value>
                    <fullName>Nepali</fullName>
                </value>
                <value>
                    <fullName>Rajasthani</fullName>
                </value>
                <value>
                    <fullName>Sanskrit</fullName>
                </value>
                <value>
                    <fullName>Santhali</fullName>
                </value>
                <value>
                    <fullName>Sourashtra</fullName>
                </value>
                <value>
                    <fullName>Tripuri</fullName>
                </value>
                <value>
                    <fullName>Tulu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Employee</fullName>
                </value>
                <value>
                    <fullName>Govt Employee</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Daily Wager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>8</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Inter Religion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smoking__c</fullName>
        <label>Smoking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smoker</fullName>
                </value>
                <value>
                    <fullName>Non-Smoker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Profile</label>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>